
	In addition to the overall test, the function allows now testing
	a sequence of models (anova.ccalist). Specific tests provided are
	by = "term" (anovacca.byterm) which is fitted as a sequence of
	models in anova.ccalist. Case by = "margin" directly calls
	permutest.cca and gets the significances from differences of
	residual variation similarly as anova.ccalist. Case by = "axis" is
	not yet implemented.

	* commsim: documentation (commsim.Rd) was restructured so that
	nullmodels were collected under separate sections with a brief
	introductory text and shorter specific text of the
	algorithm. Hopefully this makes easier for an outsider to grasp
	the width of the choices.

	* oecosimu: change printed quantiles to match the direction of the
	test as changed in r2495.

	* tests: vegan examples and vegan-tests have been out of sync for
	a long time. These have not been updated because most of the
	changes seem to be triggered by switching to R 3.0-x, and we have
	not had time to analyse the reasons. The differences also seem to
	be platform specific, and Linux and MacOS give slightly different
	results. In particular, there seem to be differences in
	permutations, constrained ordination, in particular in capscale()
	and rounding of output. We have also introduced some changes in
	output that were not yet synced. 

	* janitorial: vegan has been dependent on R >= 2.14.0 since
	version 2.1-34 (r2597 Wed 28-Aug-2013). Now superfluous references
	and tests for the older R version were removed in R code and
	documentation. FIXME: cca() returns residuals.zombie item that was
	supposed to be needed in R < 2.13.0. This was not yet removed: we
	must first check that this can be safely done.
	
Version 2.1-38 (closed November 10, 2013)

	* DESCRIPTION: depends on permute >= 0.7-5, where the
	permute::how() result object can be updated.

	* bioenv: returns now the number of the best model ('whichbest'),
	the standardized environmental data ('x') and the distance